# llm-council

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT_DIARY.md  README.md  docker-compose.yml  pyproject.toml  test_results.json  tmpclaude-5fea-cwd
.claude/: settings.local.json
.scratchpad/handoffs/: ci-cd-agent-2026-01-12-11-10-30-FAIL.md  general-programmer-agent-2026-01-10-14-35-00-SUCCESS.md  mcp-manager-agent-2026-01-10-12-45-00-SUCCESS.md  plan-2026-01-10-MCP-CONFIG-INTEGRATION.md  plan-2026-01-10-ONBOARDING-FLOW-ANALYSIS.md
src/llm_council/: __init__.py  cli.py  config.py  council.py  mcp_server.py  models.py  personas.py  providers.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_council.py  test_integration_council.py  test_matrix.ps1  test_models.py  test_personas.py  test_providers.py
